--- a/DE CW/Data_process_External.ipynb
+++ b/DE CW/Data_process_External.ipynb
@@ -40,6 +40,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column Names:\n",
+      "Index(['STATION', 'NAME', 'LATITUDE', 'LONGITUDE', 'ELEVATION', 'DATE', 'PRCP',\n",
+      "       'TAVG', 'TMAX', 'TMIN'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file into a DataFrame\n",
+    "file_path = r'External_Data.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display column names\n",
+    "print(\"Column Names:\")\n",
+    "print(data.columns)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
